@@ -1,5 +1,5 @@
 [HostListInfo]
-Version=201007201336
+Version=201007220909
 Comment="by Someonefromhell, v0.45"
 ContactURL=http://www.adslgr.com/forum/member.php?u=1666
 NumberOfPingGroups=3
@@ -184,7 +184,7 @@ NumberOfHosts=73
 73\URL=213.186.33.13
 
 [PingGroup3]
-Name=Gameservers
+Name=Game Servers
 NumberOfHosts=20
 1\Name=NGI Italy
 1\URL=88.149.128.3
